Adicionando SonarQube e Jacoco